ingress-nginx/bad-redirect.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bad-redirect
  namespace: demo
  annotations:
    nginx.ingress.kubernetes.io/permanent-redirect: "htps://wrong-url.com"
    nginx.ingress.kubernetes.io/permanent-redirect-code: "301"
spec:
  ingressClassName: nginx
  rules:
  - host: bad.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: demo-service
            port:
              number: 80
